Webhook secret token.

--- a/.env.yaml
+++ b/.env.yaml
@@ -6,6 +6,7 @@ QUEUE_NAME : QUEUE_NAME
 LOCATION   : LOCATION
 OIDC_TOKEN : OIDC_TOKEN
 TARGET_URL : TARGET_URL
+WEBHOOK_SECRET_TOKEN: WEBHOOK_SECRET_TOKEN
 
 # GIT REPOSITORY WITH SUBMISSIONS
 SUBMISSION_PROJECT: USER/REPO
